multi-pod-nginx.yaml
apiVersion: v1               
kind: Pod                   
metadata:
  name: mc3                              # Name of the Pod.
  labels:
    app: mc3                             # Labels for identifying the Pod.
spec:
  containers:
  - name: webapp             
    image: training/webapp   
  - name: nginx             
    image: nginx:alpine     
    ports:
    - containerPort: 80     
    volumeMounts:
    - name: nginx-proxy-config
      mountPath: /etc/nginx/nginx.conf  # Mount the nginx.conf file from the ConfigMap.
      subPath: nginx.conf
  volumes:
  - name: nginx-proxy-config            # Define a volume named 'nginx-proxy-config'.
    configMap:
      name: mc3-nginx-conf              # Reference the ConfigMap named 'mc3-nginx-conf'.
