nfs-nginx-web-server.yaml
apiVersion: v1                                 # Define API version and kind of Kubernetes object
kind: Pod
metadata:
  name: web-server                              # Set the name for the Pod
spec:
  containers:
  - image: nginx                                # Use nginx image for the container
    name: web-container                         # Name the container as "web-container"
    volumeMounts:
    - name: nfs-volume                          # Use volume named "nfs-volume"
      mountPath: /usr/share/nginx/html          # Mount volume at this path inside the container
  volumes:
  - name: nfs-volume                            # Define a volume named "nfs-volume"
    persistentVolumeClaim:
      claimName: pvc1                           # Attach PersistentVolumeClaim named "pvc1" to this volume
