nodeanti-affinity1-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    app: nginx
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:1.12
        ports:
        - containerPort: 80
      affinity:
        nodeAffinity:
          # 'requiredDuringSchedulingIgnoredDuringExecution' enforces a strict rule for Pod scheduling:
          # Pods must be scheduled on nodes that satisfy the specified conditions.
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms: 
            - matchExpressions:
              - key: disktype
                # 'operator: NotIn' means selecting nodes that do not have the specified label values.
                operator: NotIn
                values:
                - ssd
                # 'values: [ssd]' here means Pods must not be scheduled on nodes labeled with 'disktype: ssd'.
