tt-pod1.yaml
apiVersion: v1
kind: Pod
metadata:
  name: tt-pod1
spec:
  containers:
   - name: nginx
     image: nginx
  tolerations:
    - key: "disktype"
      # 'key': Specifies the taint key that the pod can tolerate. 
      operator: "Equal"
      # 'operator': Defines how to match the taint. 'Equal' means exact match with the taint value.
      value: "magnetic"
      # 'value': The specific taint value the pod can tolerate (here, 'magnetic').
      effect: "NoSchedule"
      # 'effect': The taint effect that the pod can tolerate. 'NoSchedule' allows the pod on a node with the specified taint.
