rabbitmq-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    component: rabbitmq   # Labels for identifying and categorizing this service.
  name: rabbitmq-service  # The name of the service.
spec:
  ports:
  - port: 5672            # Defines a port for the service (port 5672 typically used for RabbitMQ).
  selector:
    app: taskQueue        # Selects pods with the label "app" set to "taskQueue."
    component: rabbitmq   # Selects pods with the label "component" set to "rabbitmq."
